[workspace]
members = ["bin/*", "example/example-basic", "scheduled-cronjob"]
resolver = "3"

[workspace.dependencies]
scheduled-cronjob = { path = "scheduled-cronjob" }
chrono = "0.4.40"
cronjob = "0.4.17"
futures = "0.3.31"
k8s-openapi = { version = "0.24.0", features = ["schemars", "v1_30"] }
kube = { version = "0.99.0", features = ["derive", "runtime"] }
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34+deprecated"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }
